<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/iv_bluecircle"
            android:layout_width="330dp"
            android:layout_height="330dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="-80dp"
            android:layout_marginTop="-120dp"
            android:background="@drawable/bluecircle" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <ImageView
        android:id="@+id/iv_imgLogin"
        android:layout_width="340dp"
        android:layout_height="224dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/imglogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_LoginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/barlow_bold"
        android:text="@string/login_title"
        android:textAllCaps="true"
        android:textColor="@color/pale_blue"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_imgLogin" />

    <!--email-->
    <TextView
        android:id="@+id/tv_emailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/barlow_semibold"
        android:text="@string/email"
        android:textColor="@color/dark_blue"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_LoginTitle" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tf_email"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/textfield"
        android:fontFamily="@font/barlow_medium"
        android:hint="@string/input_email"
        android:paddingStart="10dp"
        android:paddingBottom="2dp"
        android:textColor="@color/dark_blue"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_emailTitle" />

    <!--password-->
    <TextView
        android:id="@+id/tv_passwordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/barlow_semibold"
        android:text="@string/password"
        android:textColor="@color/dark_blue"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tf_email" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tf_password"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/textfield"
        android:fontFamily="@font/barlow_medium"
        android:hint="@string/input_password"
        android:paddingStart="10dp"
        android:paddingBottom="2dp"
        android:textColor="@color/dark_blue"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_passwordTitle" />

    <ImageView
        android:id="@+id/btn_SeePassword"
        android:layout_width="20dp"
        android:layout_height="16dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/unseen"
        app:layout_constraintBottom_toBottomOf="@id/tf_password"
        app:layout_constraintEnd_toEndOf="@id/tf_password"
        app:layout_constraintTop_toTopOf="@id/tf_password" />

    <TextView
        android:id="@+id/btn_ForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/barlow_regular"
        android:text="@string/forget_password"
        android:textColor="@color/pale_blue"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@id/tf_password"
        app:layout_constraintTop_toBottomOf="@id/tf_password" />


    <Button
        android:id="@+id/btn_login"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:background="@drawable/buttonlogin"
        android:backgroundTint="@color/pale_blue"
        android:fontFamily="@font/barlow_semibold"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/light_blue"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_ForgetPassword"
        android:layout_marginTop="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_link"
        android:textSize="12sp"
        android:fontFamily="@font/barlow_semibold"
        android:textColor="@color/dark_blue"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>